header collapse fixes + projects page

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,11 @@ a {
     font-size: 2.5rem;
 }
 
+.h4 {
+    font-weight: 400;
+    font-size: 2rem;
+}
+
 .h5 {
     font-weight: 400;
     font-size: 1.5rem;
@@ -237,9 +242,18 @@ padding-top: 20px;
 }
 
 .contact-form-input:focus {
-
     border-color: rgba(0, 0, 0, 0.75);
     box-shadow: none;
+}
+
+.projects-list-img {
+    object-fit: cover;
+}
+
+.project-wrap {
+    border-top: 1px solid black;
+    padding: 40px 0px;
+    margin: 0px 10px;
 }
 
 @media screen and (max-width: 1156px) {
@@ -254,6 +268,9 @@ padding-top: 20px;
     }
     .h2 {
         font-size: 2rem;
+    }
+    .h4 {
+        font-size: 1.5rem;
     }
     .h5 {
         font-size: 1.25rem;
